nav bar vertical align mostly correct

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,32 @@
+body{
+    background-image: url("../images/gravel.png");
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 h1{
     background: #4aaaa5;
-    
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     color: white;
+    font-weight: bold;
+    font-size: 32px;
+    float: left;
+    padding: 10px;
+    
 }
 
 h2{
+    padding-bottom: 20px;
+    margin-bottom: 20px;
     background: white;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #4aaaa5;
-    border: white;
+    font-weight: bold;
+    font-size: 32px;
     border-bottom: #dddddd;
     border-style: solid;
 }
@@ -23,8 +40,41 @@ img{
     
     position: relative;
     width: 960px;
-    left: 25%;
+    margin: auto;
+    margin-top: 20px;
+    padding: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;   
     background: white;
+}
+
+.header{
+    position: relative;
+    top: 0;
+    width: 100%;
+    background: white;
+    border-bottom:#cccccc;
+    border-style: solid;
+    
+}
+
+.nav_bar a{
+    color: #777777;
+    text-decoration: none;
+    
+}
+
+.nav_bar li{
+    float: right;
+    padding: 10px;
+}
+
+.nav_bar a{
+    text-decoration: none;
+}
+
+.nav_bar{
+    width: 960px;   
+    margin: auto;
+    background: magenta;
 }
